--- a/SmartMeals/templates/about.html
+++ b/SmartMeals/templates/about.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>Jakiś inny kontent</p>
+<br>
+<div class="row">
+	<div class="col-md-6">
+		<div class="about-us-body">
+
+			
+		</div>
+	</div>
+</div>
 {% endblock content %}
