--- a/SmartMeals/templates/base.html
+++ b/SmartMeals/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,18 +10,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+
+    <title>SmartMeals</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
-
-    {% block content %}
-    {% endblock content %}
-
-    {% block extra_body %}
-    {% endblock %}
-
+    {%  include 'navbar.html' %}
+	<div class="container-fluid">
+	  {% block content %}
+	  {% endblock %}
+  </div>
     {% include "footer.html" %}
     {% include "scripts.html" %}
 
