--- a/SmartMeals/templates/home.html
+++ b/SmartMeals/templates/home.html
@@ -1,5 +1,67 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>Jakiś kontent</p>
+{%  include 'status.html' %}
+
+<br>
+
+<div class="row">
+	<div class="col-md-7">
+		<h5>INGREDIENTS:</h5>
+		<hr>
+		<div class="card card-body">
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'add_ingredients' %}">Add Ingredient</a>
+			<table class="table table-sm">
+				<tr>
+					<th></th>
+					<th>Name</th>
+				</tr>
+
+				{% for ingredient in ingredients %}
+					<tr>
+                        <td></td>
+                        <td style="font-size: large;">{{ingredient.name}}</td>
+                        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+						<td style="margin-left: 280px;"><a class="btn btn-sm btn-info" href="{% url 'delete_ingredients' ingredient.id %}">     Delete     </a></td>
+						
+					</tr>
+				{% endfor %}
+
+			</table>
+		</div>
+	</div>
+
+	<div class="col-md-5">
+		<!-- <h5></h5>
+		<hr>
+		<div class="card card-body">
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'home' %}">Create Order</a>
+			<table class="table table-sm">
+				<tr>
+					<th>Product</th>
+					<th>Date Orderd</th>
+					<th>Status</th>
+					<th>Update</th>
+					<th>Remove</th>
+				</tr>
+
+				{% for order in orders %}
+					<tr>
+						<td>{{order.product}}</td>
+						<td>{{order.date_created}}</td>
+						<td>{{order.status}}</td>
+						<td><a class="btn btn-sm btn-info" href="{% url 'home'  %}">Update</a></td>
+
+						<td><a class="btn btn-sm btn-danger" href="{% url 'home'  %}">Delete</a></td>
+
+					</tr>
+				{% endfor %}
+
+		
+			</table>
+		</div> -->
+	</div>
+
+</div>
+
 {% endblock content %}
