--- a/SmartMeals/templates/navbar.html
+++ b/SmartMeals/templates/navbar.html
@@ -11,7 +11,7 @@
         <a style="font-size: 25px; margin-right: 15px; margin-left: 30px;" class="nav-link" href="{% url 'home' %}">Home</a>
       </li>
       <li class="nav-item">
-        <a style="font-size: 25px; margin-right: 30px; margin-left: 15px;" class="nav-link" href="{% url 'about' %}">About Us</a>
+        <a style="font-size: 25px; margin-right: 30px; margin-left: 15px;" class="nav-link" href="{% url 'about' %}">About</a>
       </li>
     </ul>
   </div>
