--- a/SmartMeals/recipe/templates/status.html
+++ b/SmartMeals/recipe/templates/status.html
@@ -31,7 +31,7 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="orders-pending" style="background-color: #7CD1C0">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Missing Nutritions</h5>
+			  		<h5 class="card-title">Nutritions</h5>
 			  	</div>
 			  	<div class="card-body">
 			    	<h3 class="card-title">TODO</h3>
