--- a/SmartMeals/templates/about.html
+++ b/SmartMeals/templates/about.html
@@ -2,12 +2,43 @@
 
 {% block content %}
 <br>
-<div class="row">
-	<div class="col-md-6">
-		<div class="about-us-body">
 
-			
-		</div>
-	</div>
+<div class="about-us-body container">
+
+<div class="card">
+  <h5 class="card-header">About Project</h5>
+  <div class="card-body">
+    <h5 class="card-title">Smart Meals</h5>
+    <p class="card-text">Every time you check what’s in your fridge, you don’t know what to cook? Are you suffering from constant lack of time for preparing complete meals? <br/> This app is simply tailor-made for you! Add products you have, add the amount of time and voilà! <br/>All available recipes are there for you - so ready, steady, cook!</p>
+    <a href="https://github.com/KarolTalaga10/Hacknarok" class="btn btn-primary">GitHub</a>
+  </div>
 </div>
+
+    <br>
+
+<div class="card-group">
+  <div class="card">
+    <img src="https://avatars1.githubusercontent.com/u/47635604?s=460&u=119ba66872712f415b800eebd982b03685eacfa1&v=4" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Dominik Woźniak</h5>
+{#      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>#}
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://avatars3.githubusercontent.com/u/57601844?s=460&u=62d3a607416d5a17dd79f3626abf3657e317f351&v=4" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Karol Talaga</h5>
+{#      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>#}
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://avatars3.githubusercontent.com/u/57688560?s=400&u=9f5e7a288c50e331da388700dac0af156f4c9e67&v=4" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Mateusz Bahyrycz</h5>
+{#      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>#}
+    </div>
+  </div>
+</div>
+
+        </div>
 {% endblock content %}
