--- a/SmartMeals/templates/home.html
+++ b/SmartMeals/templates/home.html
@@ -7,10 +7,10 @@
 
 <div class="row">
 	<div class="col-md-7">
-		<h5>INGREDIENTS:</h5>
+		<h5>Ingredients:</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'add_ingredients' %}">Add Ingredient</a>
+			<a class="btn btn-primary  btn-lg btn-block" href="{% url 'add_ingredients' %}">Add Ingredient</a>
 			<table class="table table-sm">
 				<tr>
 					<th></th>
@@ -35,6 +35,7 @@
 		<h5>Preparation Time</h5>
 		<hr>
 		<div class="card card-body">
+			<a class="btn btn-primary  btn-lg btn-block" href="{% url 'search' %}">Search</a>
 			<div class="card card-body">
 			<form action="" method="POST">
 				{% csrf_token %}
@@ -43,7 +44,7 @@
 				<input type="submit" name="Save" />
 				</form>
 			</div>
-			<a class="btn btn-primary  btn-lg btn-block" href="{% url 'search' %}">Search</a>
+			
 			<!-- <table class="table table-sm">
 				<tr>
 					<th>Product</th>
